# local-box

./: .gitignore  README.md  justfile  pyproject.toml  setup.sh
src/local_box/: __init__.py  backend.py  cli.py
src/local_box/data/: brewfile  gitconfig  keyboard.json  vscode_keybindings  vscode_settings  zshrc
src/local_box/dependencies/: dependencies.py  devcontainer.py  docker.py  git.py  git_hub.py  homebrew.py  iterm.py  just.py  localstack.py  nerdfont.py  oh_my_posh.py  open_tofu.py  uv.py  visual_studio_code.py  zsh.py
src/local_box/dependencies/base_classes/: brew.py
