[project]
name = "local-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.2.0",
    "ruff>=0.14.8",
    "shellingham>=1.5.4",
    "ty>=0.0.1a34",
    "typer>=0.20.0",
]

[project.scripts]
local-box = "local_box:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
